@@ -1,5 +1,8 @@
 v3.5.0:
+ Users:
   - Prevent viewers from locking the screen focus.
+ Developers:
+  - Expand the method checkTomograms from the Test Centralization Layer.
 v3.4.2:
   - TS movies not hiding any acquisition parameter to prevent accidental override.
 v3.4.1:
